# klimatas-core

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  ktsd-new-gui.config  ktsd-new-gui.files  ktsd-new-gui.includes  libtool
autom4te.cache/: output.0  (+3 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  governancepage.cpp  governancepage.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  klimatas.cpp  klimatas.qrc  klimatas_locale.qrc  kts.cpp  kts.qrc  kts_locale.qrc  ktsstrings.cpp  (+64 more)
src/qt/.deps/: qt_klimatas_qt-klimatas.Po  qt_libbitcoinqt_a-addressbookpage.Po  qt_libbitcoinqt_a-addresstablemodel.Po  qt_libbitcoinqt_a-askpassphrasedialog.Po  qt_libbitcoinqt_a-bip38tooldialog.Po  qt_libbitcoinqt_a-bitcoinaddressvalidator.Po  qt_libbitcoinqt_a-bitcoingui.Po  qt_libbitcoinqt_a-bitcoinunits.Po  qt_libbitcoinqt_a-blockexplorer.Po  qt_libbitcoinqt_a-clientmodel.Po  qt_libbitcoinqt_a-coincontroldialog.Po  qt_libbitcoinqt_a-guiutil.Po  qt_libbitcoinqt_a-intro.Po  qt_libbitcoinqt_a-masternodelist.Po  qt_libbitcoinqt_a-moc_bitcoingui.Po  qt_libbitcoinqt_a-moc_blockexplorer.Po  qt_libbitcoinqt_a-moc_masternodelist.Po  qt_libbitcoinqt_a-moc_multisigdialog.Po  qt_libbitcoinqt_a-moc_notificator.Po  qt_libbitcoinqt_a-moc_paymentserver.Po  qt_libbitcoinqt_a-moc_peertablemodel.Po  qt_libbitcoinqt_a-moc_receiverequestdialog.Po  qt_libbitcoinqt_a-moc_recentrequeststablemodel.Po  qt_libbitcoinqt_a-moc_rpcconsole.Po  qt_libbitcoinqt_a-moc_sendcoinsdialog.Po  qt_libbitcoinqt_a-moc_sendcoinsentry.Po  qt_libbitcoinqt_a-moc_transactionview.Po  qt_libbitcoinqt_a-moc_walletmodel.Po  qt_libbitcoinqt_a-moc_walletview.Po  qt_libbitcoinqt_a-moc_zklimatascontroldialog.Po  qt_libbitcoinqt_a-multisenddialog.Po  qt_libbitcoinqt_a-multisigdialog.Po  qt_libbitcoinqt_a-notificator.Po  qt_libbitcoinqt_a-obfuscationconfig.Po  qt_libbitcoinqt_a-openuridialog.Po  qt_libbitcoinqt_a-optionsdialog.Po  qt_libbitcoinqt_a-optionsmodel.Po  qt_libbitcoinqt_a-overviewpage.Po  qt_libbitcoinqt_a-paymentrequestplus.Po  qt_libbitcoinqt_a-paymentserver.Po  (+22 more)
src/qt/forms/: addressbookpage.ui  bip38tooldialog.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  multisenddialog.ui  multisigdialog.ui  obfuscationconfig.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  privacydialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  tradingdialog.ui  zklimatascontroldialog.ui  zktscontroldialog.ui
src/qt/kts/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  coincontrolktswidget.cpp  coincontrolktswidget.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  denomgenerationdialog.cpp  denomgenerationdialog.h  expandablebutton.cpp  expandablebutton.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  ktsgui.cpp  ktsgui.h  loadingdialog.cpp  (+59 more)
src/qt/kts/forms/: addresseswidget.ui  coincontrolktswidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  navmenuwidget.ui  privacywidget.ui  receivewidget.ui  requestdialog.ui  send.ui  sendconfirmdialog.ui  topbar.ui  txrow.ui  welcomecontentwidget.ui
src/qt/kts/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/locale/: klimatas_bg.ts  klimatas_ca.ts  klimatas_cs.ts  klimatas_da.ts  klimatas_de.ts  klimatas_en.ts  klimatas_en_US.ts  klimatas_es.ts  klimatas_fi.ts  klimatas_fr_FR.ts  klimatas_hr.ts  klimatas_it.ts  klimatas_ja.ts  klimatas_ko_KR.ts  klimatas_nl.ts  klimatas_pl.ts  klimatas_pt.ts  klimatas_pt_BR.ts  klimatas_ro_RO.ts  klimatas_ru.ts  klimatas_sk.ts  klimatas_sv.ts  klimatas_tr.ts  klimatas_uk.ts  klimatas_zh_CN.ts  klimatas_zh_TW.ts  kts_bg.ts  kts_ca.ts  kts_cs.ts  kts_da.ts  kts_de.ts  kts_en.ts  kts_en_GB.ts  kts_en_US.ts  kts_eo.ts  kts_es.ts  kts_es_ES.ts  kts_fi.ts  kts_fr_FR.ts  kts_hi_IN.ts  (+19 more)
src/qt/res/: klimatas-qt-res.rc  kts-qt-res.rc
src/qt/res/css/: default.css  klimatas.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
src/qt/test/.deps/: qt_test_test_klimatas_qt-moc_paymentservertests.Po  qt_test_test_klimatas_qt-moc_uritests.Po  qt_test_test_klimatas_qt-paymentservertests.Po  qt_test_test_klimatas_qt-test_main.Po  (+1 more)
(+792 files in other folders)
